--- a/index.html
+++ b/index.html
@@ -5,42 +5,123 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Protegido por Senha</title>
   <style>
+  
     body {
-      text-align: center;
-      padding: 50px;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: url('BG.jpg') center/cover no-repeat fixed;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      z-index: 1;
+    }
+
+    .container {
+      position: relative;
+      z-index: 2;
+      max-width: 400px;
+      width: 100%;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      animation: slideIn 0.5s ease-in-out;
+    }
+
+    h1 {
+      color: #333;
+      animation: fadeInUp 0.5s ease-in-out;
+    }
+
+    p {
+      color: #555;
+      animation: fadeInUp 0.5s ease-in-out;
     }
 
     input {
+      width: 100%;
       padding: 10px;
       font-size: 16px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+      animation: fadeInUp 0.5s ease-in-out;
     }
 
     button {
-      padding: 10px 20px;
+      width: 100%;
+      padding: 10px;
       font-size: 16px;
       cursor: pointer;
+      background-color: #4caf50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      animation: fadeInUp 0.5s ease-in-out;
     }
 
     #imagemSecreto {
       display: none;
       max-width: 100%;
       margin-top: 20px;
+      border-radius: 8px;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Esta página é protegida por senha</h1>
-  <p>Por favor, insira a senha:</p>
-  <input type="password" id="senhaInput">
-  <button onclick="verificarSenha()">Entrar</button>
+  <div class="overlay"></div>
+  <div class="container">
+    <h1>Parabéns você chegou ao último desafio</h1>
+    <p>Por favor, insira a senha:</p>
+    <input type="password" id="senhaInput">
+    <button onclick="verificarSenha()">Entrar</button>
 
-  <img src="PIZZADA.png" alt="Imagem Secreta" id="imagemSecreto">
+    <img src="caminho/para/imagem.jpg" alt="Imagem Secreta" id="imagemSecreto">
+  </div>
 
   <script>
     function verificarSenha() {
       var senhaDigitada = document.getElementById("senhaInput").value;
-      var senhaCorreta = "123"; // Substitua com sua senha desejada
+      var senhaCorreta = "suaSenhaAqui"; // Substitua com sua senha desejada
 
       if (senhaDigitada === senhaCorreta) {
         alert("Senha correta! Bem-vindo!");
