--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     <input type="password" id="senhaInput">
     <button onclick="verificarSenha()">Entrar</button>
 
-    <img src="caminho/para/imagem.jpg" alt="Imagem Secreta" id="imagemSecreto">
+    <img src="PIZZADA.png" alt="Imagem Secreta" id="imagemSecreto">
   </div>
 
   <script>
     function verificarSenha() {
       var senhaDigitada = document.getElementById("senhaInput").value;
-      var senhaCorreta = "suaSenhaAqui"; // Substitua com sua senha desejada
+      var senhaCorreta = "123"; // Substitua com sua senha desejada
 
       if (senhaDigitada === senhaCorreta) {
         alert("Senha correta! Bem-vindo!");
